# helix-discord-rpc

./: .gitignore  Cargo.toml  README.md  flake.nix  helix-discord-rpc.scm  utils.scm
assets/: vscord-languages.json
src/: api.rs  assets.rs  discord_rpc.rs
